fix defect 239 - edit button visible when designer is in edit mode

--- a/css/designer_shop/styles.css
+++ b/css/designer_shop/styles.css
@@ -74,6 +74,7 @@ select.filterTabs
     /*z-index: -1;*/
     right: 15px;
     border-radius: 8px;
+    visibility: visible;
 }
 
 #editLink a {
